--- a/app/src/_doby/res/values/oem_.xml
+++ b/app/src/_doby/res/values/oem_.xml
@@ -11,5 +11,5 @@
     <bool name="show_third_login">true</bool>
     <bool name="show_share_btn">true</bool>
     <string name="qrcode_prefix">%1$s&amp;id=%2$s</string>
-    <string name="share_to_friends_link">http://sj.qq.com/myapp/detail.htm?apkName=%s</string>
+    <string name="share_to_friends_link">http://a.app.qq.com/o/simple.jsp?pkgname=%s&amp;g_f=991653</string>
 </resources>
