--- a/app/src/main/res/layout/fragment_mine_share_manager.xml
+++ b/app/src/main/res/layout/fragment_mine_share_manager.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -20,7 +21,7 @@
         <com.cylan.jiafeigou.widget.CustomToolbar
             android:id="@id/custom_toolbar"
             layout="@layout/layout_default_custom_tool_bar"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:backAction="@{listener}"
             app:ct_background_color="@color/color_0ba8cf"
@@ -29,28 +30,36 @@
             app:ct_fit_system_window="true"
             app:ct_icon="@drawable/nav_icon_back_white"
             app:ct_left_title="@string/Sharing_Management"
-            app:ct_left_title_color="@color/color_white" />
+            app:ct_left_title_color="@color/color_white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <com.cylan.jiafeigou.widget.HomeMineItemView
             android:id="@+id/sharedDevice"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/y60"
+            android:layout_width="395dp"
+            android:layout_height="70dp"
             android:onClickListener="@{listener}"
-            app:layout_constraintTop_toBottomOf="@id/custom_toolbar"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/custom_toolbar"
             app:rightDrawable="@drawable/icon_list_next"
             app:text="@string/Tap3_ShareDevice"
             app:textColor="@color/color_333333"
-            app:textSize="@dimen/sp16" />
+            app:textSize="@dimen/sp16"
+            tools:layout_editor_absoluteX="8dp" />
 
         <com.cylan.jiafeigou.widget.HomeMineItemView
             android:id="@+id/sharedContent"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/y60"
+            android:layout_width="395dp"
+            android:layout_height="70dp"
             android:onClickListener="@{listener}"
-            app:layout_constraintTop_toBottomOf="@id/sharedDevice"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sharedDevice"
             app:rightDrawable="@drawable/icon_list_next"
             app:text="@string/Tap3_ShareDevice_SharedContents"
             app:textColor="@color/color_333333"
-            app:textSize="@dimen/sp16" />
+            app:textSize="@dimen/sp16"
+            tools:layout_editor_absoluteX="8dp" />
     </android.support.constraint.ConstraintLayout>
 </layout>
